--- a/Blog_DB_Handling/templates/modify_blog.html
+++ b/Blog_DB_Handling/templates/modify_blog.html
@@ -3,18 +3,18 @@
     <title>블로그 수정</title>
 </head>
 <body>
-    <form action="/blogs/modify/{{ id }}" method="POST">
+    <form action="/blogs/modify/{{ blog.id }}" method="POST">
         <div style="margin-bottom: 20px">
             <label for="title">제목:</label>
-            <input type="text" id="title" name="title" value="{{ title }}" style="width: 20rem;">
+            <input type="text" id="title" name="title" value="{{ blog.title }}" style="width: 20rem;">
         </div>
         <div style="margin-bottom: 20px">
             <label for="author">작성자:</label>
-            <input type="text" id="author" name="author" value="{{ author }}"style="width: 10rem;">
+            <input type="text" id="author" name="author" value="{{ blog.author }}"style="width: 10rem;">
         </div>
         <div style="margin-bottom: 20px">
             <label for="content">내용:</label>
-            <textarea name="content" rows="5" cols="50">{{ content }}</textarea>
+            <textarea name="content" rows="5" cols="50">{{ blog.content }}</textarea>
         </div>
         <button>블로그 수정</button>
     </form>
