텍스트 및 오탈자 변경

--- a/Blog/templates/new_blog.html
+++ b/Blog/templates/new_blog.html
@@ -13,7 +13,7 @@
                         <input type="text" class="form-control" id="title" name="title" />
                     </div>
                     <div class="mb-3">
-                        <label for="author" class="form-label">지은이</label>
+                        <label for="author" class="form-label">글쓴이</label>
                         <input type="text" class="form-control" id="author" name="author" />
                     </div>
                     <!-- Content Textarea -->
