--- a/Blog/templates/show_blog.html
+++ b/Blog/templates/show_blog.html
@@ -31,7 +31,7 @@
                 // 삭제 endpoint로 delete 요청.
                 try {
                     const response = await fetch(url, {
-                        method: 'DELETE', // Use 'DELETE' method for deletion
+                        method: 'POST', // Use 'DELETE' method for deletion
                         headers: {
                             'Content-Type': 'application/json'
                         },
