만약 router에서 get_blog_by_id() 함수에서 업로드한 이미지가 없으면 defualt 이미지를 리턴하게 설정하고 삭제를 시도하면 default로 설정한 이미지가 지워진다.
그런데 클라이언트 캐시에 캐시된 이미지가 있어서 일시적으로 삭제된 이미지가 출력된다 ㅋㅋ. 주의하자.

--- a/Blog/templates/show_blog.html
+++ b/Blog/templates/show_blog.html
@@ -7,7 +7,9 @@
                 <div class="mb-4">
                     <h1 class="fw-bold">{{ blog.title }}</h1>
                     <p class="text-muted">Posted on {{ blog.modified_dt }} by {{ blog.author }}</p>
-                    <img src="{{ blog.image_loc }}" class="img-fluid w-100 mb-4" style="height: 500px;" alt="Blog Image">
+                    {% if blog.image_loc %}
+                        <img src="{{ blog.image_loc }}" class="img-fluid w-100 mb-4" style="height: 500px;" alt="Blog Image">
+                    {% endif %}
                     <p>{{ blog.content | safe }}</p>
                 </div>
 
