- import 최적화 - middleware 적용. request method는 보통 get과 post방식만 지원하는데, 이것을 미들웨어를 써서 put과 delete로 만들어줄 수 있다. - middleware는 약간... 음... 모든 파일의 전처리 기능을 수행한다.

--- a/Blog/templates/show_blog.html
+++ b/Blog/templates/show_blog.html
@@ -33,7 +33,7 @@
                 // 삭제 endpoint로 delete 요청.
                 try {
                     const response = await fetch(url, {
-                        method: 'POST', // Use 'DELETE' method for deletion
+                        method: 'DELETE', // Use 'DELETE' method for deletion
                         headers: {
                             'Content-Type': 'application/json'
                         },
