--- a/Blog/templates/modify_blog.html
+++ b/Blog/templates/modify_blog.html
@@ -6,7 +6,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-10">
                 <h1 class="fw-bold mb-4">블로그 수정</h1>
-                <form action="/blogs/modify/{{ blog.id }}" method="POST" enctype="multipart/form-data">
+                <form action="/blogs/modify/{{ blog.id }}?_method=PUT" method="POST" enctype="multipart/form-data">
                     <input type="hidden" name="author" value="{{ blog.author}}" />
                     <!-- Title Input -->
                     <div class="mb-3">
