- `navbar.html`에 login 카테고리 추가 - `login`에 필요한 html 추가

--- a/Blog/templates/http_error.html
+++ b/Blog/templates/http_error.html
@@ -15,7 +15,7 @@
     <p class="mb-4">
         {{ detail }}
     </p>
-    <a href="/blogs" class="btn btn-primary btn-lg">블로그 Home으로 돌아가기</a>
+    <a href="/blogs" class="btn btn-primary btn-lg">Back to home</a>
 </div>
 
 <!-- Bootstrap JS and dependencies -->
