--- a/Blog/templates/layout/navbar.html
+++ b/Blog/templates/layout/navbar.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/blogs/new">Create New</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="/auth/login">login</a>
                 </li>
             </ul>
         </div>
