`navbar.html`에 session에 따른 구분 추가

--- a/Blog/templates/layout/navbar.html
+++ b/Blog/templates/layout/navbar.html
@@ -10,12 +10,24 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/blogs">Home</a>
                 </li>
+                {% if session_user %}
                 <li class="nav-item">
                     <a class="nav-link" href="/blogs/new">Create New</a>
                 </li>
+                
                 <li class="nav-item">
-                    <a class="nav-link" href="/auth/login">login</a>
+                    <a class="nav-link" href="#">Hello, {{session_user.name}}</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/login">로그인</a>
+                </li>
+                {% endif %}
+                {% if session_user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/logout">로그아웃</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
