--- a/Blog/templates/modify_blog.html
+++ b/Blog/templates/modify_blog.html
@@ -7,7 +7,7 @@
             <div class="col-lg-10">
                 <h1 class="fw-bold mb-4">블로그 수정</h1>
                 <form action="/blogs/modify/{{ blog.id }}?_method=PUT" method="POST" enctype="multipart/form-data">
-                    <input type="hidden" name="author" value="{{ blog.author}}" />
+                    <!-- <input type="hidden" name="author" value="{{ blog.author}}" /> -->
                     <!-- Title Input -->
                     <div class="mb-3">
                         <label for="title" class="form-label">제목</label>
