--- a/Blog/templates/new_blog.html
+++ b/Blog/templates/new_blog.html
@@ -12,10 +12,10 @@
                         <label for="title" class="form-label">제목</label>
                         <input type="text" class="form-control" id="title" name="title" />
                     </div>
-                    <div class="mb-3">
+                    <!-- <div class="mb-3">
                         <label for="author" class="form-label">글쓴이</label>
                         <input type="text" class="form-control" id="author" name="author" />
-                    </div>
+                    </div> -->
                     <!-- Content Textarea -->
                     <div class="mb-3">
                         <label for="content" class="form-label">내용</label>
