로그인 사용자의 블로그 수정/삭제 권한 설정

--- a/Blog/templates/show_blog.html
+++ b/Blog/templates/show_blog.html
@@ -15,8 +15,10 @@
 
                 <!-- Action Buttons -->
                 <a href="/blogs" class="btn btn-secondary">홈으로 돌아가기</a>
+                {% if is_valid_auth %}
                 <a href="/blogs/modify/{{ blog.id }}" class="btn btn-primary">블로그 수정</a>
                 <button class="btn btn-danger" onclick="confirmDelete()">블로그 삭제</button>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -48,7 +50,7 @@
                     }
                } catch (error) {
                     console.error('Error during the fetch operation:', error);
-                    alert('An error occurred. Please try again.');
+                    alert('You are not authorized to delete this blog.');
                 }
             }
         }
